# cgraphics_cpp

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CMakeConfigFiles/: root_directory.h.in
examples/: CmakeLists.txt
examples/01_SimpleQuad/: simpleQuad.cpp
examples/02_Transformations/: transformations.cpp
libs/: CMakeLists.txt
source/: CMakeLists.txt  animation.hpp  animator.hpp  animdata.hpp  assimp_glm_helpers.hpp  bone.hpp  mesh.hpp  model.hpp  performanceMonitor.hpp  root_directory.h
source/cameras/: camera2d.hpp  camera3d.hpp  cameraFirstPerson.hpp
source/shaders/: AnimPointLightShader.fs  AnimPointLightShader.vs  BloomFinalCalShader.fs  BloomLightSrcShader.fs  BloomMultipleClrShader.fs  BloomMultipleTexShader.fs  CascadeMappingClrShader.fs  CascadeMappingClrShader.vs  CascadeMappingTexShader.fs  CascadeMappingTexShader.vs  DirLightCSMClrShader.fs  DirLightCSMClrShader.vs  DirLightCSMTexShader.fs  DirLightColoredShader.fs  DirLightShadowClrShader.fs  DirLightShadowTexShader.fs  DirLightShadowTexShader.vs  DirLightTexturedShader.fs  DirLightTexturedShader.vs  DownSampleShader.fs  HDRShader.fs  MultipleLightClrShader.fs  MultipleLightTexShader.fs  MultipleLightTexShader.vs  PhongTexturedShader.fs  PhysBloomFinalShader.fs  PointLightColoredShader.fs  PointLightShadowClrShader.fs  PointLightShadowClrShader.vs  PointLightShadowTexShader.fs  PointLightShadowTexShader.vs  PointLightTexturedShader.fs  ShadowMapDepthShader.vs  SpotLightColoredShader.fs  SpotLightShadowClrShader.fs  SpotLightShadowTexShader.fs  SpotLightShadowTexShader.vs  SpotLightTexturedShader.fs  SpotLightTexturedShader.vs  UpSampleShader.fs  (+7 more)
(+21 files in other folders)
